@@ -1,0 +1,7 @@
+CORE
+assignment_pattern2.sv
+
+^file .* line 4: struct does not have a member `something_else'$
+^EXIT=2$
+^SIGNAL=0$
+--
