@@ -1,0 +1,7 @@
+CORE
+assignment_pattern3.sv
+
+^file .* line 4: assignment pattern does not assign member `a'$
+^EXIT=2$
+^SIGNAL=0$
+--
